objects/Monster_Com_Forms__c.object
<CustomObject>
    <fields>
        <fullName>About_Previous_Job__c</fullName>
        <description>Tast Number 3456</description>
        <inlineHelpText>Dear user, please type text here.</inlineHelpText>
        <label>About Previous Job</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Candidate_Email__c</fullName>
        <description>Tast Number 03848</description>
        <inlineHelpText>Dear user, please enter email address here.</inlineHelpText>
        <label>Candidate Email</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Expe__c</fullName>
        <description>Tast Number 7867</description>
        <inlineHelpText>Dear user, Please enter years of experience here.</inlineHelpText>
        <label>Experience</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <defaultValue>&apos;John&apos;</defaultValue>
        <description>Reference: Mail from Client Cox dated 2nd Jan 2018
Or
Task Number 123456</description>
        <inlineHelpText>Dear user, please enter first name here (Ex:John)</inlineHelpText>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <defaultValue>&apos;Male&apos;</defaultValue>
        <description>Task number 8776</description>
        <inlineHelpText>Dear user, please select gender here.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <default>true</default>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <description>Tast Number 8747</description>
        <inlineHelpText>Dear user, please enter status here.</inlineHelpText>
        <label>Job Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Known__c</fullName>
        <label>Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>.Net</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preffered_Country__c</fullName>
        <defaultValue>&apos;US&apos;</defaultValue>
        <description>Task number 4587</description>
        <inlineHelpText>Dear user, please select contry here.</inlineHelpText>
        <label>Preferred Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary_Expected__c</fullName>
        <description>Tast Number 9876</description>
        <inlineHelpText>Dear user, please enter salary here(Ex:50K)</inlineHelpText>
        <label>Salary Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Monster.Com Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Form-{0}</displayFormat>
        <label>Monster.Com Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monster.Com Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>